--- a/hterm.cabal
+++ b/hterm.cabal
@@ -34,6 +34,8 @@ executable hterm
                     ,   posix-pty
                     ,   extra
                     ,   unix
+                    ,   directory
+
   GHC-Options:     -threaded
   -- hs-source-dirs:      
   default-language:    Haskell2010
