--- a/hterm.cabal
+++ b/hterm.cabal
@@ -36,6 +36,6 @@ executable hterm
                     ,   unix
                     ,   directory
 
-  GHC-Options:     -threaded
+  GHC-Options:     -Wall -O2 -threaded -static -optl-static
   -- hs-source-dirs:      
   default-language:    Haskell2010
