--- a/hterm.cabal
+++ b/hterm.cabal
@@ -38,6 +38,6 @@ executable hterm
                     ,   process
                     ,   hdaemonize
 
-  ghc-options:     -Wall -O2 -threaded -static -optl-static
+  ghc-options:     -Wall -O2 -threaded
   -- hs-source-dirs:      
   default-language:    Haskell2010
